--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -24,7 +24,26 @@
   }
 }
 
-@media only screen and (max-width: 640px) {
+.links {
+  display: flex;
+
+  a {
+    padding: 16px 8px;
+    display: inline-block;
+    color: #ff4545;
+    text-decoration: none;
+    text-transform: capitalize;
+
+    &:first-child {
+      padding-left: 0;
+    }
+    &:last-child {
+      padding-right: 0;
+    }
+  }
+}
+
+@media only screen and (max-width: 576px) {
   .page {
     flex-direction: column;
   }
