--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -25,6 +25,12 @@
           playing classical guitar, and chess.
         </p>
       </section>
+
+      <div class="links">
+        <a href="https://github.com/rensjaspers">GitHub</a>
+        <a href="https://nl.linkedin.com/in/rensjaspers">LinkedIn</a>
+        <a href="mailto:rens.jaspers@gmail.com">E-mail</a>
+      </div>
     </div>
   </div>
 </div>
