--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,25 +4,24 @@
   <div class="description-pane">
     <div class="description">
       <section>
-        <span class="subtitle">Rens Jaspers</span>
-        <h1>Angular developer</h1>
-        <p>Hi. My name is Rens Jaspers.</p>
+        <h1 class="title">Rens Jaspers</h1>
+        <h2 class="subtitle">
+          Full Stack Developer in Amsterdam, The Netherlands
+        </h2>
         <p>
           I have worked on healthcare information systems as a frontend
           developer since 2014.
         </p>
-        <p>
-          Angular 2+ has been my web framework of choice since 2017. In 2019 I
-          started developing REST APIs using NestJS + TypeScript.
-        </p>
+        <p>In 2019 I started working as a full stack developer.</p>
+        <p>Angular 2+ and NestJS applications are my specialty.</p>
         <p>
           Before my IT career I studied East Asian Studies (MA) and Japan
           Studies (BA) at Leiden University, focusing on linguistics and online
           communication.
         </p>
         <p>
-          Besides web development and linguistics I also enjoy photography,
-          playing classical guitar, and chess.
+          In my spare time I enjoy photography, playing classical guitar, and
+          chess.
         </p>
       </section>
 
