--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -22,6 +22,14 @@
     padding: 32px;
     width: 100%;
     max-width: 375px;
+    .title {
+      font-size: 24px;
+      font-weight: normal;
+    }
+    .subtitle {
+      font-size: 30px;
+      font-weight: bold;
+    }
     p {
       color: rgba(255, 255, 255, 0.7);
     }
