--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,11 +9,13 @@
           Full Stack Developer in Amsterdam, The Netherlands
         </h2>
         <p>
-          I have worked on healthcare information systems as a frontend
-          developer since 2014.
+          I have worked as a web frontend developer since 2014. In 2019 I became
+          a full stack web developer.
         </p>
-        <p>In 2019 I started working as a full stack developer.</p>
-        <p>Angular 2+ and NestJS applications are my specialty.</p>
+        <p>
+          Angular, Ionic, NestJS and MySQL are my specialty. I mainly work on
+          healthcare applications.
+        </p>
         <p>
           Before my IT career I studied East Asian Studies (MA) and Japan
           Studies (BA) at Leiden University, focusing on linguistics and online
