--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -30,7 +30,7 @@
       <div class="links">
         <a href="https://github.com/rensjaspers">GitHub</a>
         <a href="https://nl.linkedin.com/in/rensjaspers">LinkedIn</a>
-        <a href="mailto:rens.jaspers@gmail.com">E-mail</a>
+        <a href="mailto:rens.jaspers@gmail.com">Email</a>
       </div>
     </div>
   </div>
