--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -47,7 +47,7 @@
     display: inline-block;
     color: #ff4545;
     text-decoration: none;
-    text-transform: capitalize;
+    text-transform: uppercase;
   }
 }
 
