Squashed commit of the following:
commit 6d7acfb15fdb80b79aebd3809953b57287bfb64c
Author: Rens Jaspers <rens.jaspers@gmail.com>
Date:   Wed Sep 29 07:11:06 2021 +0200

    Fix positioning

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,11 +1,22 @@
+:host {
+  display: block;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: #222;
+  color: white;
+}
+
 .page {
   display: flex;
-  height: 100vh;
-  max-width: 800px;
+  height: 100%;
 }
 
 .profile-picture-pane {
   width: 100%;
+  max-width: 375px;
   min-height: 240px;
   background-image: url("/assets/images/me.webp");
   background-size: cover;
@@ -55,6 +66,7 @@
   .profile-picture-pane {
     max-width: 240px;
     max-height: 800px;
+    background-position-x: 80%;
   }
 }
 
